# RxIntel

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: env.py  graph.py  rate_limit.py  schemas.py  token_tracker.py
agent/nodes/: critic_agent.py  entity_resolver.py  fusion.py  graph_retriever.py  query_router.py  reasoning_agent.py  retrieval_dispatch.py  vector_retriever.py
agent/prompts/: critic_prompts.py  reasoning_prompts.py  router_prompt.py
api/: __init__.py  main.py  models.py
data/: demo_responses.json
etl/: build_gazetteer.py  build_vector_store.py  parse_drugbank.py
evaluation/: calibration_queries.yaml  queries.yaml
scripts/: calibrate_benchmark.py  run_benchmark.py  seed_demo.py
tests/: test_api.py  test_critic_agent.py  test_entity_resolver.py  test_fusion.py  test_gazetteer.py  test_graph.py  test_graph_retriever.py  test_json_extractor.py  test_reasoning_agent.py  test_retrieval_dispatch.py  test_router.py  test_schemas.py  test_vector_retriever.py
ui/: __init__.py  app.py  components.py  styles.py
