[project]
name = "drug-intelligence-agent"
version = "0.1.0"
description = "LangGraph multi-agent system for clinician-grade drug Q&A over Neo4j + ChromaDB."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Phanender" }]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "etl*", "api*", "eval*"]
exclude = ["tests*", "venv*", "data*", "chroma_db*", "mlruns*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["venv", "data", "chroma_db", "mlruns"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "D",   # pydocstyle
]
ignore = [
    "D100",  # missing module docstring
    "D104",  # missing __init__ docstring
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"eval/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
files = ["agent", "etl", "api"]
exclude = ["venv", "data", "chroma_db", "mlruns", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
